...
}

struct MyAboutView: View {
    var body: some View {
        List {
            Section {
                Text("PhotoBox").font(.title2.bold())
                LabeledContent("版本", value: Bundle.main.object(forInfoDictionaryKey: "CFBundleShortVersionString") as? String ?? "--")
                LabeledContent("构建", value: Bundle.main.object(forInfoDictionaryKey: "CFBundleVersion") as? String ?? "--")
            }
        }
        .navigationTitle("关于")
        .navigationBarTitleDisplayMode(.inline)
...
